// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть корретный компонент 1`] = `
<DashboardWidget>
  <DashboardWidgetHeader
    title="Просмотры объявлений"
    total="123"
  />
  <DashboardWidgetLineChart
    animation={true}
    backgroundColor="#DEF1FB"
    borderColor="#92D1F0"
    chartData={
      Array [
        1,
        2,
        3,
      ]
    }
    className="DashboardCardViewWidget__chart"
    height={175}
    margin={
      Object {
        "bottom": 0,
        "left": 20,
        "right": 30,
        "top": 20,
      }
    }
    showAxis={true}
    showTooltip={true}
    thickness={4}
    width={372}
  />
  <DashboardWidgetStatistic
    className="DashboardCardViewWidget__statistic"
    compareData={
      Object {
        "daily": 1,
        "monthly": 3,
        "weekly": 2,
      }
    }
  />
</DashboardWidget>
`;

exports[`должен вернуть корретный компонент, если нет данных 1`] = `
<DashboardWidget>
  <DashboardWidgetHeader
    title="Просмотры объявлений"
  />
  <DashboardWidgetAlert
    message="После добавления объявлений здесь будет отображаться статистика просмотров объявлений и контактный данных."
  />
</DashboardWidget>
`;

exports[`должен вернуть корретный компонент, если нет данных, но есть офферы 1`] = `
<DashboardWidget>
  <DashboardWidgetHeader
    title="Просмотры объявлений"
  />
  <DashboardWidgetAlert
    hasIcon={true}
    message="Объявления никто не посмотрел"
  />
</DashboardWidget>
`;
